# datasette-create-view

./: README.md  pyproject.toml
datasette_create_view/: __init__.py
datasette_create_view/templates/: create_view.html
tests/: test_create_view.py
